--- a/Tests/UITests/TestApp/Resources/Localizable.xcstrings
+++ b/Tests/UITests/TestApp/Resources/Localizable.xcstrings
@@ -56,7 +56,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "By default, the application downloads the Llama 3 8B model in its instruct variation. The size of the model is around 5GB."
+            "value" : "By default, the application downloads the Phi-3 3.8B model in its instruct variation. The size of the model is around 2.2GB."
           }
         }
       }
